# smartgen

./: ACTION_PLAN.md  CONTRIBUTING.md  EXAMPLES.md  EXAMPLE_USAGE.md  README.md  ROADMAP.md  SECURITY.md  changelog.md  code_of_conduct.md  license  main.py  pyproject.toml  quick_start.md  summary.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: lint.yml  publish.yml  test.yml
examples/: README.md
examples/ecommerce/: README.md  srs.md
examples/ecommerce/src/: __init__.py
examples/ecommerce/src/domain/: __init__.py
examples/ecommerce/src/domain/aggregates/: __init__.py  order.py
examples/ecommerce/src/domain/entities/: __init__.py  product.py  user.py
examples/ecommerce/src/domain/value_objects/: __init__.py  address.py  email.py  money.py
src/smartgen/: cli.py  config.py
src/smartgen/commands/: __init__.py  generate.py  init.py  llmconfig.py
src/smartgen/policies/ddd/python/: domain.txt  layout.txt
src/smartgen/services/: __init__.py  domain_generator.py  layout_generator.py  llm_init.py
tests/: __init__.py  conftest.py  test_config.py
