[project]
name = "smartgen"
version = "0.1.0"
description = "Smart code and content generator"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Siddhant Rath" }]
requires-python = ">=3.12"
dependencies = [
    "typer>=0.21.1",
    "ollama>=0.2.1",
    "PyYAML>=6.0.2",
    "rich>=13.7.0",
    "openai>=2.17.0",
]

[project.urls]
Homepage = "https://github.com/sidxz/smartgen"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
smartgen = "smartgen.cli:main"
